test: refactor HGBrasilIbovespaOperationsTest for readability - Simplified mocked JSON payload and streamlined assertions to reduce boilerplate